--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "author": "Tancredi Trugenberger",
   "license": "MIT",
   "dependencies": {
-    "underscore": "~1.8.x"
+    "underscore": "^1.13.1"
   },
   "devDependencies": {
-    "mocha": "~3.2.x",
+    "mocha": "^9.0.1",
     "should": "~11.1.x"
   }
 }
